# mpvRx

./: CHANGELOG.md  MPVRX_CUSTOM_COMMANDS.md  README.md  gradle.properties
.github/workflows/: Android Build.yml  build.yml  pre-release.yml  preview.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/assets/shaders/: Anime4K-Ultra.glsl  Anime4K-Ultra_DbH.glsl  Anime4K-Ultra_DbH_Sharp.glsl  Anime4K-Ultra_DbL.glsl  Anime4K-Ultra_DbM.glsl  Anime4K-Ultra_SSh.glsl  Anime4K-Ultra_Sh.glsl
app/src/main/cpp/: CMakeLists.txt  curl_bridge.c
app/src/main/java/app/gyrolet/mpvrx/: MainActivity.kt
app/src/main/java/app/gyrolet/mpvrx/database/repository/: PlaylistRepository.kt
app/src/main/java/app/gyrolet/mpvrx/di/: DomainModule.kt
app/src/main/java/app/gyrolet/mpvrx/domain/anime4k/: Anime4KManager.kt
app/src/main/java/app/gyrolet/mpvrx/domain/browser/: FileSystemItem.kt
app/src/main/java/app/gyrolet/mpvrx/domain/network/: NetworkConnection.kt  NetworkFile.kt
app/src/main/java/app/gyrolet/mpvrx/domain/thumbnail/: CoilVideoThumbnailDecoder.kt  (+4 more)
app/src/main/java/app/gyrolet/mpvrx/preferences/: AppearancePreferences.kt  BrowserPreferences.kt  DecoderPreferences.kt  GesturePreferences.kt  PlayerPreferences.kt  SeekbarStyle.kt  SubtitlesPreferences.kt  YtdlPreferences.kt
app/src/main/java/app/gyrolet/mpvrx/repository/: NetworkLifecycleObserver.kt
app/src/main/res/values/: strings.xml
app/src/main/resources/: dummy.properties
fastlane/metadata/android/en-US/changelogs/: 140.txt
gradle/: libs.versions.toml
(+83 files in other folders)
